add insults, pigs and dadjokes

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
 
         <p id=count >{{count}}</p>
 
-        <form method="POST" action="/">
+        <form method="POST" action="/car-ride-rewards">
           <input type="submit"/>
         </form>
 
